--- a/index.html
+++ b/index.html
@@ -258,7 +258,8 @@
     <footer>
         <p>Juan Andrés Giraldo Díaz<br>
         Contacto: juanandresgiraldodiaz@gmail.com<br>
-        Teléfono: 3134564786</p>
+        Teléfono: 3134564786 <br>
+        IG:juangiraldo306</p>
     </footer>
 
     <audio id="miAudio" src="Audios/La caja de puppet tono.mp3"></audio>
